@@ -20,27 +20,41 @@ import com.devsuperior.dsdeliver.repository.ProductRepository;
 public class OrderService {
 	
 	@Autowired
-	private OrderRepository repositoy;
+	private OrderRepository repository;
 	
 	@Autowired
 	private ProductRepository productRepositoy;
 	
 	@Transactional(readOnly = true)
 	public List <OrderDTO> findAll(){
-		List<Order> list = repositoy.findOrdersWithProducts();
-		return list.stream().map(x -> new OrderDTO(x)).collect(Collectors.toList());
+		List<Order> list = repository.findOrdersWithProducts();
+		return list.stream().map(x -> new OrderDTO(x))
+				.collect(Collectors
+				.toList());
 	}
 	
 	@Transactional
 	public OrderDTO insert(OrderDTO dto) {
-		Order order = new Order(null, dto.getAddress(), dto.getLatitude(),
-				dto.getLongitude(), Instant.now(), OrderStatus.PENDING);
+		Order order = new Order(null,
+				dto.getAddress(), 
+				dto.getLatitude(),
+				dto.getLongitude(),
+				Instant.now(), 
+				OrderStatus.PENDING);
 		for(ProductDTO p: dto.getProducts()) {
 			Product product = productRepositoy.getOne(p.getId());
 			order.getProducts().add(product);
 		}
 		
-		order = repositoy.save(order);
+		order = repository.save(order);
+		return new OrderDTO(order);
+	}
+	
+	@Transactional
+	public OrderDTO setDelivered(Long id) {
+		Order order = repository.getOne(id);
+		order.setStatus(OrderStatus.DELIVERED);
+		order = repository.save(order);
 		return new OrderDTO(order);
 	}
 }
